# Email_Manager

./: .env  .gitignore  Dockerfile  README.md  app.py  contacts.js  emailCreator.js  email_todos.js  filter_contacts.js  firebase.py  main.js  notion_table.js  package-lock.json  package.json  requirements.txt  requirments.txt  sendDrafts.js  taskList.js
.github/workflows/: google-cloudrun-docker.yml
Email_Agent/: Dockerfile  api_flask.py  app.py  contacts.py  draft_graph.py  email_agent.py  email_graph.py  eshan_main.py  main.py  main_API.py  outlook.py  outlook2.py  relevant_content.py  requirements.txt  requirments.txt  search.py  secrets.py  secrets_ret.py  sender.py  web_agent.py
Email_Agent/Firebase/: auth.py  (+1 more)
Email_Drafter/: Dockerfile  contacts.js  emailCreator.js  filter_contacts.js  main.js  main_emailer.js  package-lock.json  package.json  secrets.js  sendDrafts.js  simple_test.js  test_api.js
Web_Scrapping/: Dockerfile  cloudbuild.yaml  main.py  requirements.txt  secrets.py  url_finder.py  web_scrapper.py
basic_ui/: app.py  migrate_db.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt  requirments.txt  vercel.json
basic_ui/.cache/nix/: binary-cache-v6.sqlite
basic_ui/.cache/replit/env/: latest  latest.json
basic_ui/.cache/replit/nix/: env.json
basic_ui/.local/state/replit/agent/: repl_state.json
basic_ui/.upm/: store.json
basic_ui/frontend/: pyvenv.cfg
basic_ui/static/css/: custom.css
basic_ui/static/js/: main.js
basic_ui/templates/: check_db.html  dashboard.html  generate_email.html  index.html  login.html  signup.html
(+25 files in other folders)
