[tool.poetry]
name = "Basic_UI"
version = "0.1.0"
description = "A description of your project"
authors = ["Bill Newman <you@example.com>"]
packages = [
    { include = "*.py" },
]

[tool.poetry.dependencies]
python = ">=3.11"
email-validator = ">=2.2.0"
flask = ">=3.0.3"
flask-sqlalchemy = ">=3.1.1"
psycopg2-binary = ">=2.9.10"

[tool.poetry.group.dev.dependencies]
# Add your development dependencies here

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
